<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/colorPrimary"
    android:padding="0dp"
    tools:context=".RegisterActivity">
    <!--page Title-->
    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="63dp" />
    <!--fist name input-->
    <EditText
        android:id="@+id/input_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="20dp"
        android:hint="@string/first_name"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <!--last name input-->
    <EditText
        android:id="@+id/input_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_first_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="20dp"
        android:hint="@string/last_name"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <!--phone number input-->
    <EditText
        android:id="@+id/input_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_last_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@android:drawable/stat_sys_phone_call"
        android:drawablePadding="20dp"
        android:hint="@string/phone"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <!--Email input-->
    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_phone_number"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <!--Password input-->
    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <!--Birthday -->
    <TextView
        android:id="@+id/input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
        android:drawablePadding="20dp"
        android:gravity="center|left|center_vertical"
        android:hint="Birthday"
        android:imeOptions="actionDone"
        android:inputType="date"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15dp" />
    <!-- sign up button    -->
    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_date"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/register" />
</RelativeLayout>